[gd_scene load_steps=8 format=3 uid="uid://prototype001"]

[ext_resource type="Script" path="res://prototype.gd" id="1_prototype"]
[ext_resource type="PackedScene" uid="uid://dog001" path="res://dog.tscn" id="2_dog"]
[ext_resource type="Texture2D" path="res://assets/backgrounds/bg_kitchen_main.png" id="3_bg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_floor"]
size = Vector2(1920, 50)

[sub_resource type="LabelSettings" id="LabelSettings_score"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_timer"]
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_roundend"]
font_size = 56

[node name="Prototype" type="Node2D"]
script = ExtResource("1_prototype")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_bg")
expand_mode = 1
stretch_mode = 6

[node name="Floor" type="StaticBody2D" parent="." groups=["floor"]]
position = Vector2(960, 1055)
collision_layer = 1
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("RectangleShape2D_floor")

[node name="Dog" parent="." instance=ExtResource("2_dog")]
position = Vector2(1500, 1030)

[node name="ThrowZone" type="ColorRect" parent="."]
offset_left = 50.0
offset_top = 700.0
offset_right = 400.0
offset_bottom = 1000.0
color = Color(0.4, 0.4, 0.6, 0.3)

[node name="ThrowLabel" type="Label" parent="ThrowZone"]
layout_mode = 0
offset_left = 50.0
offset_top = 130.0
offset_right = 300.0
offset_bottom = 170.0
text = "Swipe here to throw!"
horizontal_alignment = 1

[node name="TrajectoryLine" type="Line2D" parent="."]
width = 4.0
default_color = Color(1, 0.8, 0.2, 0.7)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 50.0
offset_top = 30.0
offset_right = 300.0
offset_bottom = 80.0
text = "Catches: 0"
label_settings = SubResource("LabelSettings_score")

[node name="Instructions" type="Label" parent="UI"]
offset_left = 1400.0
offset_top = 30.0
offset_right = 1870.0
offset_bottom = 100.0
text = "Swipe from the blue zone
toward the dog!"
horizontal_alignment = 2

[node name="AimButton" type="Button" parent="UI"]
offset_left = 1750.0
offset_top = 110.0
offset_right = 1870.0
offset_bottom = 160.0
text = "Aim: ON"

[node name="TimerLabel" type="Label" parent="UI"]
offset_left = 860.0
offset_top = 30.0
offset_right = 1060.0
offset_bottom = 110.0
text = "30"
label_settings = SubResource("LabelSettings_timer")
horizontal_alignment = 1

[node name="RoundEndLabel" type="Label" parent="UI"]
visible = false
offset_left = 660.0
offset_top = 350.0
offset_right = 1260.0
offset_bottom = 550.0
text = "Round Over!"
label_settings = SubResource("LabelSettings_roundend")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="UI"]
visible = false
offset_left = 810.0
offset_top = 580.0
offset_right = 1110.0
offset_bottom = 680.0
theme_override_font_sizes/font_size = 48
text = "Start"
